2004-03-15  Todd Berman <tberman@sevenl.net>

	* monodevelop.desktop: added some bugzilla info
	* src/Main/Base/Gui/CompletionDatabaseWizard/druis.cs: 
		added some titles
		fix cancel action.
	* src/Main/Base/Commands/AutostartCommands.cs:
		fix bug #55439, we now dont show the main gui when generating
		the completion database.

2004-03-12  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdldock/sources/gdl/gdl-dock-item-grip.c:
	* gdldock/sources/gdl/gdl-dock-item-grip.h:
	* gdldock/sources/gdl/gdl-dock-item.c:
	* gdldock/sources/gdl/gdl-dock-object.c:
	* gdldock/sources/gdl/gdl-dock-bar.c: 

	Update GdlDock from Gnome's gdl module: ellipsizing labels for the
	dock item grip and a couple of memory and object leaks.
	
2004-03-12  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdldock/sources/gdl/Makefile.am: Build libgdldock.so using
	automake builtin rules for shared libraries instead of a hackish,
	home made solution.

	* configure.in: Add GDLDOCK_{CFLAGS,LIBS} variables for building
	GdlDock.

2004-03-05  John BouAntoun  <jba-mono@optusnet.com.au>
	
	* src/Main/Base/Commands/ProjectBrowserCommands/CombineNodeCommands.cs:
	Made it so adding any new nodes to projectbrowserview 
	(i.e. adding new or existing projects or combines to it) expands
	to the added nodes. bug #54725
	Also fixed bug where could not add a new project to combine

2004-03-11  John Luke  <jluke@cfl.rr.com>

	* src/AddIns/DisplayBindings/SourceEditor/:
	CompletionWindow: subclass properly and
	remove KeyRelease for CompletionWindow

	partially port ExportToProjectHtml and add it to Makefile.am

	mv EditTemplateGroupDialog to Dialogs subdir
	and update Makefile.am

	* src/Main/Base/Services/StatusBar:
	make statusbar accept 3 ints
	do the work in the service

	* src/Libraries/CsVbParser:
	import CsVbParser from SD, in hopes of fixing our
	horribly broken one

2004-03-10  John Luke  <jluke@cfl.rr.com>

	* README: add monodoc and debugger to list of deps