@@ -1,3 +1,8 @@
+2004-03-15  John Luke  <jluke@cfl.rr.com>
+	
+	* monodevelop.in: fix LD_LIBRARY_PATH
+	add --trace and --profile cl handling
+
 2004-03-15  Todd Berman <tberman@sevenl.net>
 
 	* monodevelop.desktop: added some bugzilla info
